Fix for rubric student view not showing.

--- a/sass/partials/_inbox.scss
+++ b/sass/partials/_inbox.scss
@@ -80,3 +80,7 @@
     color: #fff;
     font-weight: normal;
 }
+
+#rubric_view_form {
+    padding-left: 6px;
+} 
